# CMakeTest

./: CMakeLists.txt  main.c
